--- a/kimo-app/src/index.css
+++ b/kimo-app/src/index.css
@@ -1,13 +1,136 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+
+  .menu-item {
+    font-style: normal;
+    font-weight: 400 !important;
+    font-size: 16px;
+    line-height: 20px;
+    color: #001A1A;
+  }
+
+
+ 
+
+  .banner-text {
+    font-family: 'IBM Plex Mono';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 94%;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 6.44%, rgba(255, 255, 255, 0.9) 95.08%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+
+  .sub-heading {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #001A1A;
+  }
+
+  .card-heading {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 20px;
+    color: #008080;
+  }
+
+  .card-desc {
+    font-family: 'IBM Plex Mono';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #001A1A;
+  }
+
+  .box-shadow {
+    box-shadow: 0px 0px 16px 0px rgba(0, 128, 128, 0.16);
+  }
+
+  .navbar {
+    position: absolute;
+    height: 80px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    top: 24px;
+  }
+
+  .button {
+    padding: 9px 24px 11px;
+    color: white;
+    width: 128px;
+    height: 40px;
+    background: #008080;
+    border-radius: 8px;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .button-hover{
+    width: 128px;
+    height: 40px;
+    border: 1px solid #008080;
+    background: #fff;
+    font-size: 14px;
+    text-align: center;
+    color: #008080;
+  }
+
+  .category-title {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #001A1A;
+  }
+
+  .button-rev {
+    padding: 9px 24px 11px;
+    width: 107px;
+    height: 40px;
+    border: 1px solid #008080;
+    border-radius: 8px;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #008080;
+  }
+
+  .button-rev-hover{
+    color: white;
+    width: 107px;
+    height: 40px;
+    background: #008080; 
+  }
+
+  .guide-name {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 20px;
+    color: #001A1A;
+  }
+
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
