--- a/kimo-app/src/index.css
+++ b/kimo-app/src/index.css
@@ -32,25 +32,15 @@
       }
       .hero-text{
         /* Welcome to Hawaii */
-left: 394px;
-top: 176px;
-
-font-family: 'IBM Plex Mono';
-font-style: normal;
-font-weight: 700;
-font-size: 140px;
-line-height: 132px;
-/* or 94% */
-display: flex;
-align-items: center;
-text-align: center;
-
-background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 6.44%, #FFFFFF 95.08%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-background-clip: text;
-text-fill-color: transparent;
-
-
+        font-family: 'IBM Plex Mono';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 64px;
+        line-height: 94%;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 6.44%, rgba(255, 255, 255, 0.9) 95.08%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
       }
 }
