--- a/kimo-app/src/index.css
+++ b/kimo-app/src/index.css
@@ -3,44 +3,91 @@
 @tailwind utilities;
 
 @layer components {
-    .button {
-        padding: 9px 24px 11px;
-        color: white;
-        width: 8rem;
-        height: 40px;
-        background: #008080;
-        border-radius: 8px;
-        font-family: sans-serif;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 20px;
-      }
-      .button:hover{
-        border: 1px solid #008080;
-        background: #fff;
-        font-size: 14px;
-        text-align: center;
-        color: #008080;
-      }
-      .menuItem{
-        font-family: IBM Plexo;
-        font-weight: 400;
-        font-size: 20px;
-        color: #001A1A;
-        line-height: 20px;       
-      }
-      .hero-text{
-        /* Welcome to Hawaii */
-        font-family: 'IBM Plex Mono';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 64px;
-        line-height: 94%;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 6.44%, rgba(255, 255, 255, 0.9) 95.08%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
+  .button {
+    padding: 9px 24px 11px;
+    color: white;
+    width: 8rem;
+    height: 40px;
+    background: #008080;
+    border-radius: 8px;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .icon{
+    width: 24px;
+    height: 24px;
+    left: 280px;
+    top: 0px;
+    fill:#008080;
+    border-radius: 50%;
+    background: #E6F2F2;
+
+    /* Light */
+  }
+    .shadow{
+      box-shadow: 0px 0px 16px rgba(0, 128, 128, 0.16);
+    }
+  
+
+  .button:hover {
+    border: 1px solid #008080;
+    background: #fff;
+    font-size: 14px;
+    text-align: center;
+    color: #008080;
+  }
+
+  .menuItem {
+    font-family: IBM Plexo;
+    font-weight: 400;
+    font-size: 20px;
+    color: #001A1A;
+    line-height: 20px;
+  }
+
+  .hero-text {
+    /* Welcome to Hawaii */
+    font-family: 'IBM Plex Mono';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 94%;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 6.44%, rgba(255, 255, 255, 0.9) 95.08%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .heading {
+    /* Highlights */
+    /* Body - Bold */
+    font-family: 'IBM Plex Mono';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height, or 125% */
+
+    /* Dark */
+    color: #001A1A;
+  }
+
+  .card-heading {
+    font-family: 'IBM Plex Mono';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 20px;
+    /* identical to box height, or 83% */
+
+
+    /* Green */
+
+    color: #008080;
+
+  }
 }
